--- a/index.html
+++ b/index.html
@@ -279,64 +279,64 @@ let selectedNode = null;
 /* ================= DATOS DE NODOS ================= */
 const nodeData = [
   {
-    img: "fotito.gif",
+    img: "https://github.com/falart3/esfotito.gif",
     title: "Who I'm I?",
     text: "Sometimes I ask myself. Although we live in a changing world, I know I'm part of the change. And thanks to the problems and my experiences, I grow positively every day. I believe that problems are like fuel for solutions...",
     link: "https://example.com"
   },
   {
-    img: "fal.png",
+    img: "https://github.com/falart3/esfal.png",
     title: "Fal Art",
     text: "Obras de Arte",
     link: "https://falart.jimdofree.com/"
   },
   {
-    img: "blue.png",
+    img: "https://github.com/falart3/esblue.png",
     title: "Blue Print",
     text: "Este nodo representa los planos en 2D y 3D.",
     link: "https://falart.jimdofree.com/portfolio/architecture/"
   },
   {
-    img: "3n.png",
+    img: "https://github.com/falart3/es3n.png",
     title: "3N Tegelzetter",
     text: "Este nodo representa las instalaciones de azulejos.",
     link: "https://www.facebook.com/people/3N-tegelzetter/100040099371380/"
   },
   {
-    img: "deve.png",
+    img: "https://github.com/falart3/esdeve.png",
     title: "Developer",
     text: "Este nodo representa los codigos y programas.",
     link: "https://github.com/falart3?tab=repositories"
   },
   {
-    img: "insta.png",
+    img: "https://github.com/falart3/esinsta.png",
     title: "Intagram",
     text: "Este nodo representa otra conexion mas.",
     link: "https://www.instagram.com/francisco.lopez.art/?hl=es"
   },
   {
-    img: "face.png",
+    img: "https://github.com/falart3/esface.png",
     title: "FacebookIntagram",
     text: "Este nodo representa otra conexion mas.",
     link: "https://www.facebook.com/people/Francisco-Lopez/1552539529/"
   },
-      { img: "wtsaap.png",
+      { img: "https://github.com/falart3/eswtsaap.png",
     title: "Whatsaap",
     text: "Este nodo representa otra conexion mas."
   },
   {
-    img: "yout.png",
+    img: "https://github.com/falart3/esyout.png",
     title: "YouTube",
     text: "Canal de videos",
     link: "https://www.youtube.com/user/falarte"
   },
-  { img: "blog.png",
+  { img: "https://github.com/falart3/esblog.png",
     title: "Blog",
     text: "Este nodo representa otra conexion mas.",
     link: "http://falart.blogspot.com/"
   },
       {
-    img: "lin.png",
+    img: "https://github.com/falart3/eslin.png",
     title: "Linkedin",
     text: "Este nodo representa otra conexion mas.",
     link: "https://www.linkedin.com/in/francisco-lopez-a5b67326"
