--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       font-family: Arial, sans-serif;
       color: #fff;
-      background-image: url("fondo01.jpg");
+      background-image: url("https://github.com/falart3/es/fondo01.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -109,7 +109,7 @@
 
   <!-- Columna izquierda (1/4) -->
   <div class="header-col left">
-    <img src="legos.png" alt="Logo" class="logo">
+    <img src="https://github.com/falart3/es/legos.png" alt="Logo" class="logo">
   </div>
 
   <!-- Columna centro (2/4) -->
@@ -120,7 +120,7 @@
   <!-- Columna derecha (1/4, 2 filas) -->
   <div class="header-col right">
     <div class="right-top">
-      <img src="fotito.gif" alt="Animación">
+      <img src="https://github.com/falart3/es/fotito.gif" alt="Animación">
     </div>
     <div class="right-bottom">
       <!-- Ejemplo de script simple -->
