--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       font-family: Arial, sans-serif;
       color: #fff;
-      background-image: url("https://github.com/falart3/es/fondo01.jpg");
+      background-image: url("fondo01.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -109,7 +109,7 @@
 
   <!-- Columna izquierda (1/4) -->
   <div class="header-col left">
-    <img src="https://github.com/falart3/es/legos.png" alt="Logo" class="logo">
+    <img src="legos.png" alt="Logo" class="logo">
   </div>
 
   <!-- Columna centro (2/4) -->
@@ -120,7 +120,7 @@
   <!-- Columna derecha (1/4, 2 filas) -->
   <div class="header-col right">
     <div class="right-top">
-      <img src="https://github.com/falart3/es/fotito.gif" alt="Animación">
+      <img src="fotito.gif" alt="Animación">
     </div>
     <div class="right-bottom">
       <!-- Ejemplo de script simple -->
@@ -559,28 +559,7 @@ const canvasRect = canvas.getBoundingClientRect();
   // 🧵 HILO
 drawThread(node, anchorX, anchorY); 
 
-  // 📦 PANEL
- /*
-  ctx.save();
-  ctx.fillStyle = "rgba(10,10,10,0.55)";
-  ctx.strokeStyle = "rgba(0,255,255,0.4)";
-  ctx.lineWidth = 1.5;
 
-  ctx.beginPath();
-  ctx.roundRect(panelX, panelY, panelW, panelH, 16);
-  ctx.fill();
-  ctx.stroke();
-
-  // 📝 TEXTO
-  ctx.fillStyle = "#fff";
-  ctx.font = "bold 14px sans-serif";
-  ctx.fillText(node.data.text, panelX + 16, panelY + 32);
-
-  ctx.font = "13px sans-serif";
-  ctx.fillText("Click para abrir enlace", panelX + 16, panelY + 60);
-
-  ctx.restore();
-  */
 }
 
 
