--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@ var TxtType = function(el, toRotate, period) {
     <!-- Panel de información -->
     <aside id="infoPanel">
       <h2 id="infoTitle">Nodo</h2>
-      <p id="infoText">Selecciona un nodo.</p>
-      <a id="infoLink" href="#" target="_blank">Ir al enlace</a>
+      <p id="infoText">Selecciona un nodo.</p> <br>
+      <a id="infoLink" href="#" target="_blank">>>></a>
     </aside>
 
     <!-- Canvas -->
