--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ var TxtType = function(el, toRotate, period) {
     <aside id="infoPanel">
       <h2 id="infoTitle">Nodo</h2>
       <p id="infoText">Selecciona un nodo.</p> <br>
-      <a id="infoLink" href="#" target="_blank">>>></a>
+     <h1><a id="infoLink" href="#" target="_blank">→</a></h1>
     </aside>
 
     <!-- Canvas -->
