--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ var TxtType = function(el, toRotate, period) {
 
     <!-- Panel de información -->
     <aside id="infoPanel">
-      <h2 id="infoTitle">Nodo</h2>
-      <p id="infoText">Selecciona un nodo.</p> <br>
+      <h2 id="infoTitle">SPIN THE SPHERE</h2>
+      <p id="infoText">select a node</p> <br>
      <h1><a id="infoLink" href="#" target="_blank">→</a></h1>
     </aside>
 
