--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 
   <!-- Columna izquierda (1/4) -->
   <div class="header-col left">
+    <a href="https://falart3.github.io/es/index.html" target="_self">
+      https://falart3.github.io/es/index.html </a>
     <img src="legos.png" alt="Logo" class="logo">
   </div>
 
