--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   <!-- Columna izquierda (1/4) -->
   <div class="header-col left">
     <a href="https://falart3.github.io/es/index.html" target="_self">
-      https://falart3.github.io/es/index.html </a>
-    <img src="legos.png" alt="Logo" class="logo">
+      <img src="legos.png" alt="Logo" class="logo">
+    </a>
   </div>
 
   <!-- Columna centro (2/4) -->
@@ -210,7 +210,7 @@ var TxtType = function(el, toRotate, period) {
     <aside id="infoPanel">
       <h2 id="infoTitle">SPIN THE SPHERE</h2>
       <p id="infoText">select a node</p> <br>
-     <h1><a id="infoLink" href="#" target="_blank">→</a></h1>
+  <!--  <h1><a id="infoLink" href="#" target="_blank">→</a></h1> -->
     </aside>
 
     <!-- Canvas -->
