--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ var TxtType = function(el, toRotate, period) {
     <aside id="infoPanel">
       <h2 id="infoTitle">SPIN THE SPHERE</h2>
       <p id="infoText">select a node</p> <br>
-  <!--  <h1><a id="infoLink" href="#" target="_blank">→</a></h1> -->
+ <h1><a id="infoLink" href="#" target="_blank">→</a></h1> 
     </aside>
 
     <!-- Canvas -->
