--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ var TxtType = function(el, toRotate, period) {
 
     <!-- Panel de información -->
     <aside id="infoPanel">
-      <h2 id="infoTitle">SPIN THE SPHERE</h2>
+      <h2 id="infoTitle">SPIN THE SPHERE</h2><br>
       <p id="infoText">select a node</p> <br>
  <h1><a id="infoLink" href="#" target="_blank">→</a></h1> 
     </aside>
@@ -284,7 +284,7 @@ const nodeData = [
     img: "fotito.png",
     title: "Who I'm I?",
     text: "Sometimes I ask myself. Although we live in a changing world, I know I'm part of the change. And thanks to the problems and my experiences, I grow positively every day. I believe that problems are like fuel for solutions...",
-    link: "https://example.com"
+   // link: "https://example.com"
   },
   {
     img: "fal.png",
