--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ const nodeData = [
   {
     img: "fal.png",
     title: "Fal Art",
-    text: "Obras de Arte",
+    text: "This node will take you to the site I built when I dedicated myself more to illustration and professional comics.",
     link: "https://falart.jimdofree.com/"
   },
   {
@@ -307,7 +307,7 @@ const nodeData = [
   {
     img: "deve.png",
     title: "Developer",
-    text: "Este nodo representa los codigos y programas.",
+    text: "This node represents some small examples of the codes and programs.",
     link: "https://github.com/falart3?tab=repositories"
   },
   {
@@ -334,7 +334,7 @@ const nodeData = [
   },
   { img: "blog.png",
     title: "Blog",
-    text: "Este nodo representa otra conexion mas.",
+    text: "In this node, from a blog from 2008, you will find my fifth site since I started posting things on the internet, and some early attempts in the paths of drawing and art.",
     link: "http://falart.blogspot.com/"
   },
       {
