--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ resize();
 /* ================= CONFIG ================= */
 
     /* ====radio====*/
-const RADIUS = 220;
+/* const RADIUS = 220; */
     
 
     /*resto*/
