--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@ drawThread(node, anchorX, anchorY);
 
 
     //radio
-    let RADIUS = 220;
+    const RADIUS = 220;
 
 function updateRadius() {
   if (window.innerWidth < 768) {
