--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
   /* Header más compacto */
   .header {
-        display: flex;
+    display: flex;
     flex-direction: column;
     height: auto;
     text-align: center;
@@ -179,7 +179,7 @@
   /* Main en una sola columna */
   .main {
     grid-template-columns: 1fr;
-      display: flex;
+    display: flex;
     flex-direction: column;
     height: auto;
   }
@@ -195,26 +195,22 @@
     top: 0;
     transform: none;
     order: 2;
-    margin: 10px auto;
+    /*margin: 10px auto;*/
     border-radius: 18px;
     overflow-y: auto;
     padding: 10%;
-     
-    
- 
- 
   }
 
   canvas { touch-action: none; }
          /* CANVAS */
-  .canvas-container {
+  /*.canvas-container {
     width: 100%;
     height: 55vh;
     order: 1;
-  }
-         #sphereCanvas {
-    width: 100%;
-    height: 100%;
+  }*/
+    #sphereCanvas {
+    width: 50%;
+    height: 50%;
   }
        /* SIDEBAR */
   .sidebar {
