--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
     padding: 10%;
   }
 
-  canvas { touch-action: none; }
+  /*canvas { touch-action: none; }*/
          /* CANVAS */
-  /*.canvas-container {
-    width: 100%;
-    height: 55vh;
+  .canvas-container {
+    width: 70%;
+    height: 70%;
     order: 1;
-  }*/
+  }
     #sphereCanvas {
     width: 50%;
     height: 50%;
