--- a/index.html
+++ b/index.html
@@ -195,22 +195,20 @@
     top: 0;
     transform: none;
     order: 2;
-    /*margin: 10px auto;*/
     border-radius: 18px;
     overflow-y: auto;
-    padding: 10%;
-  }
+    }
 
-  /*canvas { touch-action: none; }*/
+  canvas { touch-action: none; }
          /* CANVAS */
   .canvas-container {
     width: 70%;
-    height: 70%;
+    height: 55vh;
     order: 1;
   }
     #sphereCanvas {
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
   }
        /* SIDEBAR */
   .sidebar {
