--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
   canvas { touch-action: none; }
          /* CANVAS */
   .canvas-container {
-    width: 70%;
-    height: 55vh;
+    width: 100%;
+    height: 100%;
     order: 1;
   }
     #sphereCanvas {
