--- a/index.html
+++ b/index.html
@@ -195,26 +195,34 @@
     top: 0;
     transform: none;
     order: 2;
+	z-index: 2;
     border-radius: 18px;
     overflow-y: auto;
+	pointer-events: auto;
     }
 
   canvas { touch-action: none; }
          /* CANVAS */
   .canvas-container {
     width: 100%;
-    height: 100%;
+    height: 60hv; /* altura */
     order: 1;
+	  z-index: 1;
+    flex-shrink: 0;
+    position: relative;
+	  pointer-events: auto;
   }
     #sphereCanvas {
     width: 100%;
     height: 100%;
+		display: block;
   }
        /* SIDEBAR */
   .sidebar {
     display: block;
     order: 3;
     padding: 10px;
+	z-index: 2;
   }
 
   .sidebar ul {
