--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
     .canvas-container {
       position: relative;
+		z-index: 1;  /* Canvas debajo del panel solo visualmente, pero recibe eventos */
     }
 
     #sphereCanvas {
@@ -198,7 +199,7 @@
 	z-index: 2;
     border-radius: 18px;
     overflow-y: auto;
-	pointer-events: auto;
+	pointer-events: none;
     }
 
   canvas { touch-action: none; }
