--- a/index.html
+++ b/index.html
@@ -198,9 +198,7 @@
     order: 2;
 	z-index: 2;
     border-radius: 18px;
-    overflow-y: auto;
-	pointer-events: none;
-    }
+   	}
 
   canvas { touch-action: none; }
          /* CANVAS */
@@ -208,15 +206,15 @@
     width: 100%;
     height: 60hv; /* altura */
     order: 1;
-	  z-index: 1;
+	z-index: 1;
     flex-shrink: 0;
     position: relative;
-	  pointer-events: auto;
-  }
-    #sphereCanvas {
+	}
+    
+	#sphereCanvas {
     width: 100%;
     height: 100%;
-		display: block;
+	align: center;
   }
        /* SIDEBAR */
   .sidebar {
