--- a/index.html
+++ b/index.html
@@ -66,17 +66,11 @@
   }
 
   @keyframes drift {
-    from {
-      transform: translate(0, 0);
-    }
-    to {
-      transform: translate(var(--dx), var(--dy));
-    }
+    from { transform: translate(0, 0); }
+    to { transform: translate(var(--dx), var(--dy));  }
   }
       
-
       /* web */
-
     .header {
       display: grid;
       grid-template-columns: 1fr 3fr 1fr;
@@ -84,29 +78,18 @@
       align-items: center;
     }
 
-    .header-col {
-      padding: 10px;
-    }
+    .header-col { padding: 10px; }
 
-    .header img {
-      max-height: 80px;
-    }
+    .header img { max-height: 80px; }
 
-    .logo {
-      max-width: 200px;
-    }
+    .logo { max-width: 200px; }
 
-    .center {
-      text-align: center;
-    }
+    .center { text-align: center; }
 
-    .right {
-      display: grid;
-      grid-template-rows: 1fr 1fr;
-    }
+    .right { display: grid; grid-template-rows: 1fr 1fr; }
 
-    .main {
-      display: grid;
+    .main { 
+	  display: grid;
       grid-template-columns: 3fr 1fr;
       height: calc(100vh - 120px);
     }
@@ -140,8 +123,7 @@
     }
 
     #histats_counter{
-
-              color: gold;
+      color: gold;
       text-decoration: none;
     }
         
@@ -156,8 +138,7 @@
     }
 
       /* MOVIL */
-
-   @media (max-width: 768px) {
+@media (max-width: 768px) {
 
   body { cursor: default; }
 
@@ -200,11 +181,11 @@
     border-radius: 18px;
    	}
 
-  canvas { touch-action: none; }
+  /*canvas { touch-action: auto; }*/
          /* CANVAS */
   .canvas-container {
     width: 100%;
-    height: 60hv; /* altura */
+    height: 100hv; /* altura */
     order: 1;
 	z-index: 1;
     flex-shrink: 0;
