--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
   /* Panel abajo */
   #infoPanel {
-    background: rgba(20,20,20,0.6);
+    /*background: rgba(20,20,20,0.6);*/
     border: 2px solid rgba(212,175,55,0.4); /* dorado */
     position: relative;
     width: 80%;
