--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       /* MOVIL */
 @media (max-width: 768px) {
 
-  body { cursor: default; }
+  /*body { cursor: default; }*/
 
   /* Header más compacto */
   .header {
@@ -149,14 +149,12 @@
     height: auto;
     text-align: center;
     gap: 6px;
-    padding: 10px 0;
+    /*padding: 10px 0;*/
   }
 
    .header img { max-height: 60px; }
    .header h1 { font-size: 14px; }
    .logo { max-width: 120px; }
-
-
 
   /* Main en una sola columna */
   .main {
@@ -189,13 +187,14 @@
     order: 1;
 	z-index: 1;
     flex-shrink: 0;
-    position: relative;
+    /*position: relative;*/
+	position: center;
 	}
     
 	#sphereCanvas {
     width: 100%;
     height: 100%;
-	align: center;
+	position: center;
   }
        /* SIDEBAR */
   .sidebar {
