--- a/index.html
+++ b/index.html
@@ -139,9 +139,7 @@
 
       /* MOVIL */
 @media (max-width: 768px) {
-
   /*body { cursor: default; }*/
-
   /* Header más compacto */
   .header {
     display: flex;
@@ -168,8 +166,9 @@
   #infoPanel {
     /*background: rgba(20,20,20,0.6);*/
     border: 2px solid rgba(212,175,55,0.4); /* dorado */
-    position: relative;
+    position: absulute;
     width: 80%;
+	height: auto;
     max-width: none;
     left: 0;
     top: 0;
