--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     height: auto;
     text-align: center;
     gap: 6px;
-    /*padding: 10px 0;*/
+    padding: 10px 0;
   }
 
    .header img { max-height: 60px; }
@@ -164,14 +164,13 @@
 
   /* Panel abajo */
   #infoPanel {
-    /*background: rgba(20,20,20,0.6);*/
     border: 2px solid rgba(212,175,55,0.4); /* dorado */
-    position: absulute;
-    width: 80%;
+    /*position: absulute;*/
+    width: auto;
 	height: auto;
     max-width: none;
-    left: 0;
-    top: 0;
+    /*left: 0;
+    top: 0;*/
     transform: none;
     order: 2;
 	z-index: 2;
