--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   .header {
     display: flex;
     flex-direction: column;
-    height: auto;
+    height: 80px;
     text-align: center;
     gap: 6px;
     padding: 10px 0;
