--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
   /* Panel abajo */
   #infoPanel {
     border: 2px solid rgba(212,175,55,0.4); /* dorado */
-    /*position: absulute;*/
+    position: absulute;
     width: auto;
 	height: auto;
     max-width: none;
-    /*left: 0;
-    top: 0;*/
+    left: 0;
+    top: 0;
     transform: none;
     order: 2;
 	z-index: 2;
