--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   /* Panel abajo */
   #infoPanel {
     border: 2px solid rgba(212,175,55,0.4); /* dorado */
-    position: absulute;
+    position: relative;
     width: auto;
 	height: auto;
     max-width: none;
@@ -185,7 +185,7 @@
     order: 1;
 	z-index: 1;
     flex-shrink: 0;
-    /*position: relative;*/
+    position: relative;
 	position: center;
 	}
     
